udemy学習 TSの高度な型についての学習

--- a/udemy_understanding_typescript/index.html
+++ b/udemy_understanding_typescript/index.html
@@ -9,6 +9,6 @@
     <script src="dist/analytics.js" defer></script>
 </head>
 <body>
-    <button>Claick</button>
+    <input id="message-output"></input>
 </body>
 </html>
