--- a/udemy_understanding_typescript/index.html
+++ b/udemy_understanding_typescript/index.html
@@ -9,6 +9,6 @@
     <script src="dist/analytics.js" defer></script>
 </head>
 <body>
-    <input id="message-output"></input>
+    <div id="app"></div>
 </body>
 </html>
